--- a/src/app/pages/dashboard/work-space/work-space-body/work-management/work-management.component.scss
+++ b/src/app/pages/dashboard/work-space/work-space-body/work-management/work-management.component.scss
@@ -28,9 +28,10 @@
 }
 
 .list-group {
-  padding: 0 10px 10px 10px;
+  padding: 0 12px 12px 12px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: flex-start;
 }
 
 .list-group > li {
@@ -41,8 +42,9 @@
   background: $devui-base-bg;
   border: 1px solid $devui-line;
   border-radius: $devui-border-radius;
-  width: 80px;
-  margin: 10px;
+  width: 135px;
+  margin-right: 12px;
+  margin-bottom: 10px;
   text-align: center;
 }
 
@@ -51,4 +53,36 @@
   justify-content: center;
   align-items: center;
   padding: 12px;
+}
+
+@media only screen and (max-width: 2125px) {
+  .da-work-management {
+    .list-group .list-group-item {
+      width: calc(16.66666667% - 12px);
+    }
+  }
+}
+
+@media only screen and (max-width: 1535px) {
+  .da-work-management {
+    .list-group .list-group-item {
+      width: calc(20% - 12px);
+    }
+  }
+}
+
+@media only screen and (max-width: 675px) {
+  .da-work-management {
+    .list-group .list-group-item {
+      width: calc(25% - 12px);
+    }
+  }
+}
+
+@media only screen and (max-width: 475px) {
+  .da-work-management {
+    .list-group .list-group-item {
+      width: calc(50% - 12px);
+    }
+  }
 }
