chore(release): release ng-devui-admin 2.0.0 (#16)
Co-authored-by: huaweidevcloud <devcloudmobile@huawei.com>

--- a/src/app/@shared/components/dynamic-forms/ui/checkbox/checkbox.widget.html
+++ b/src/app/@shared/components/dynamic-forms/ui/checkbox/checkbox.widget.html
@@ -1,16 +1,16 @@
 <d-checkbox-group
   [(ngModel)]="ui.values"
   [name]="name"
-  [options]="ui.options"
-  [direction]="ui.direction"
-  [isShowTitle]="ui.isShowTitle"
-  [beforeChange]="ui.beforeChange"
-  [filterKey]="ui.filterKey"
-  [itemWidth]="ui.itemWidth"
+  [options]="ui.options!"
+  [direction]="ui.direction!"
+  [isShowTitle]="ui.isShowTitle!"
+  [beforeChange]="ui.beforeChange!"
+  [filterKey]="ui.filterKey!"
+  [itemWidth]="ui.itemWidth!"
   [color]="ui.color"
-  [showAnimation]="ui.showAnimation"
-  [disabled]="ui.disabled"
-  [dValidateRules]="ui.validateRules"
-  [dValidatePopConfig]="ui.validatePopConfig"
+  [showAnimation]="ui.showAnimation!"
+  [disabled]="ui.disabled!"
+  [dValidateRules]="ui.validateRules!"
+  [dValidatePopConfig]="ui.validatePopConfig!"
 >
 </d-checkbox-group>
