--- a/src/app/@shared/components/dynamic-forms/ui/radio/radio.widget.html
+++ b/src/app/@shared/components/dynamic-forms/ui/radio/radio.widget.html
@@ -1,12 +1,11 @@
-<d-radio-group 
+<d-radio-group
   [name]="name"
   [values]="ui.values"
   [(ngModel)]="ui.value"
-  [cssStyle]="ui.cssStyle" 
-  [disabled]="ui.disabled"
-  [beforeChange]="ui.beforeChange" 
-  [dValidateRules]="ui.validateRules"
-  [dValidatePopConfig]="ui.validatePopConfig"
+  [cssStyle]="ui.cssStyle!"
+  [disabled]="ui.disabled!"
+  [beforeChange]="ui.beforeChange!"
+  [dValidateRules]="ui.validateRules!"
+  [dValidatePopConfig]="ui.validatePopConfig!"
 >
 </d-radio-group>
-
