--- a/src/app/@shared/components/dynamic-forms/ui/tags-input/tags-input.widget.html
+++ b/src/app/@shared/components/dynamic-forms/ui/tags-input/tags-input.widget.html
@@ -2,19 +2,19 @@
   [name]="name"
   [(ngModel)]="ui.tags"
   [suggestionList]="ui.suggestionList"
-  [displayProperty]="ui.displayProperty"
+  [displayProperty]="ui.displayProperty!"
   [placeholder]="ui.placeholder || ''"
   [minLength]="ui.minLength || 3"
   [maxLength]="ui.maxLength || _max"
   [maxTags]="ui.maxTags || _max"
-  [spellcheck]="ui.spellcheck"
-  [isAddBySpace]="ui.isAddBySpace"
-  [caseSensitivity]="ui.caseSensitivity"
-  [disabled]="ui.disabled"
-  [showAnimation]="ui.showAnimation"
-  [checkBeforeAdd]="ui.checkBeforeAdd"
+  [spellcheck]="ui.spellcheck!"
+  [isAddBySpace]="ui.isAddBySpace!"
+  [caseSensitivity]="ui.caseSensitivity!"
+  [disabled]="ui.disabled!"
+  [showAnimation]="ui.showAnimation!"
+  [checkBeforeAdd]="ui.checkBeforeAdd!"
   (click)="$event.stopPropagation()"
-  [dValidateRules]="ui.validateRules"
-  [dValidatePopConfig]="ui.validatePopConfig"
+  [dValidateRules]="ui.validateRules!"
+  [dValidatePopConfig]="ui.validatePopConfig!"
 >
 </d-tags-input>
