--- a/src/app/@shared/components/dynamic-forms/ui/text-input/text-input.widget.html
+++ b/src/app/@shared/components/dynamic-forms/ui/text-input/text-input.widget.html
@@ -1,16 +1,14 @@
 <input
-  dTextInput 
+  dTextInput
   [(ngModel)]="ui.values"
   [name]="name"
-  [attr.placeholder]="ui.placeholder" 
-  [attr.id]="ui.id" 
-  [attr.type]="ui.type" 
+  [attr.placeholder]="ui.placeholder"
+  [attr.id]="ui.id"
+  [attr.type]="ui.type"
   [attr.autocomplete]="ui.autocomplete"
-  [disabled]="ui.disabled" 
-  [error]="ui.error" 
-  [size]="ui.size"
-  [dValidateRules]="ui.validateRules"
-  [dValidatePopConfig]="ui.validatePopConfig"
+  [disabled]="ui.disabled!"
+  [error]="ui.error!"
+  [size]="ui.size!"
+  [dValidateRules]="ui.validateRules!"
+  [dValidatePopConfig]="ui.validatePopConfig!"
 />
-
-
