--- a/src/app/@shared/components/dynamic-forms/ui/textarea/textarea.widget.html
+++ b/src/app/@shared/components/dynamic-forms/ui/textarea/textarea.widget.html
@@ -1,12 +1,12 @@
 <textarea
-  dTextarea 
+  dTextarea
   [name]="name"
   [(ngModel)]="ui.values"
-  [attr.placeholder]="ui.placeholder" 
+  [attr.placeholder]="ui.placeholder"
   [attr.id]="ui.id"
-  [disabled]="ui.disabled" 
-  [error]="ui.error" 
-  [resize]="ui.resize"
-  [dValidateRules]="ui.validateRules"
-  [dValidatePopConfig]="ui.validatePopConfig"
+  [disabled]="ui.disabled!"
+  [error]="ui.error!"
+  [resize]="ui.resize!"
+  [dValidateRules]="ui.validateRules!"
+  [dValidatePopConfig]="ui.validatePopConfig!"
 ></textarea>
