--- a/src/app/@shared/components/dynamic-forms/ui/toggle/toggle.widget.html
+++ b/src/app/@shared/components/dynamic-forms/ui/toggle/toggle.widget.html
@@ -1,12 +1,11 @@
-<d-toggle 
+<d-toggle
   [(ngModel)]="ui.checked"
   [name]="name"
-  [size]="ui.size" 
-  [color]="ui.color"
-  [checked]="ui.checked"
-  [disabled]="ui.disabled"
-  [beforeChange]="ui.beforeChange"
-  [dValidateRules]="ui.validateRules"
-  [dValidatePopConfig]="ui.validatePopConfig"
+  [size]="ui.size!"
+  [color]="ui.color!"
+  [checked]="ui.checked!"
+  [disabled]="ui.disabled!"
+  [beforeChange]="ui.beforeChange!"
+  [dValidateRules]="ui.validateRules!"
+  [dValidatePopConfig]="ui.validatePopConfig!"
 ></d-toggle>
-
