--- a/src/app/pages/list/card-list/card-list.component.html
+++ b/src/app/pages/list/card-list/card-list.component.html
@@ -24,7 +24,7 @@
           <div class="da-list-content" dLoading [loading]="busy">
             <d-card *ngFor="let item of cardList" class="card-item">
               <d-card-header>
-                <d-avatar dCardAvatar [name]="item.name" [imgSrc]="item.imgSrc" [isRound]="true" [width]="28" [height]="28"></d-avatar>
+                <d-avatar dCardAvatar [name]="item.name!" [imgSrc]="item.imgSrc!" [isRound]="true" [width]="28" [height]="28"></d-avatar>
                 <d-card-title>{{ item.title }}</d-card-title>
               </d-card-header>
               <d-card-content>
