--- a/src/app/@shared/components/dynamic-forms/ui/select/select.widget.html
+++ b/src/app/@shared/components/dynamic-forms/ui/select/select.widget.html
@@ -1,38 +1,35 @@
-<d-select 
+<d-select
   [name]="name"
   [(ngModel)]="ui.values"
-  [options]="ui.options"
-  [isSearch]="ui.isSearch"
+  [options]="ui.options!"
+  [isSearch]="ui.isSearch!"
   [scrollHight]="ui.scrollHight || '300px'"
   [highlightItemClass]="ui.highlightItemClass || 'bg-grey'"
-  [filterKey]="ui.filterKey"
-  [multiple]="ui.multiple"
-  [isSelectAll]="ui.isSelectAll"
-  [readonly]="ui.readonly"
-  [size]="ui.size"
-  [disabled]="ui.disabled"
+  [filterKey]="ui.filterKey!"
+  [multiple]="ui.multiple!"
+  [isSelectAll]="ui.isSelectAll!"
+  [readonly]="ui.readonly!"
+  [size]="ui.size!"
+  [disabled]="ui.disabled!"
   [placeholder]="ui.placeholder || 'Please Input keywords'"
   [searchPlaceholder]="ui.searchPlaceholder || ''"
-  [searchFn]="ui.searchFn"
-  [direction]="ui.direction"
-  [overview]="ui.overview"
-  [enableLazyLoad]="ui.enableLazyLoad"
-  [extraConfig]="ui.extraConfig"
-  [optionDisabledKey]="ui.optionDisabledKey"
-  [optionImmutableKey]="ui.optionImmutableKey"
-  [keepMultipleOrder]="ui.keepMultipleOrder"
-  [appendToBody]="ui.appendToBody"
-  [appendToBodyDirections]="ui.appendToBodyDirections"
-  [autoFocus]="ui.autoFocus"
-  [toggleOnFocus]="ui.toggleOnFocus"
-  [width]="ui.width"
+  [searchFn]="ui.searchFn!"
+  [direction]="ui.direction!"
+  [overview]="ui.overview!"
+  [enableLazyLoad]="ui.enableLazyLoad!"
+  [extraConfig]="ui.extraConfig!"
+  [optionDisabledKey]="ui.optionDisabledKey!"
+  [optionImmutableKey]="ui.optionImmutableKey!"
+  [keepMultipleOrder]="ui.keepMultipleOrder!"
+  [appendToBody]="ui.appendToBody!"
+  [appendToBodyDirections]="ui.appendToBodyDirections!"
+  [autoFocus]="ui.autoFocus!"
+  [toggleOnFocus]="ui.toggleOnFocus!"
+  [width]="ui.width!"
   [virtualScroll]="ui.virtualScroll"
-  [allowClear]="ui.allowClear"
-  [showAnimation]="ui.showAnimation"
-  [dValidateRules]="ui.validateRules"
-  [dValidatePopConfig]="ui.validatePopConfig"
+  [allowClear]="ui.allowClear!"
+  [showAnimation]="ui.showAnimation!"
+  [dValidateRules]="ui.validateRules!"
+  [dValidatePopConfig]="ui.validatePopConfig!"
   (loadMore)="ui.loadMore($event)"
 ></d-select>
-
-
-
