--- a/src/app/pages/list/advance-list/advance-list.component.html
+++ b/src/app/pages/list/advance-list/advance-list.component.html
@@ -2,21 +2,15 @@
   <div class="da-content-banner">
     <d-breadcrumb>
       <d-breadcrumb-item
-        ><a routerLink="/">{{
-          "list.breadcrumb.home" | translate
-        }}</a></d-breadcrumb-item
+        ><a routerLink="/">{{ 'list.breadcrumb.home' | translate }}</a></d-breadcrumb-item
       >
-      <d-breadcrumb-item>{{
-        "list.breadcrumb.formPage" | translate
-      }}</d-breadcrumb-item>
-      <d-breadcrumb-item>{{
-        "list.breadcrumb.advanceList" | translate
-      }}</d-breadcrumb-item>
+      <d-breadcrumb-item>{{ 'list.breadcrumb.formPage' | translate }}</d-breadcrumb-item>
+      <d-breadcrumb-item>{{ 'list.breadcrumb.advanceList' | translate }}</d-breadcrumb-item>
     </d-breadcrumb>
     <div class="da-content-banner-title">
-      {{ "list.advanceList.title" | translate }}
+      {{ 'list.advanceList.title' | translate }}
     </div>
-    <div>{{ "list.advanceList.description" | translate }}</div>
+    <div>{{ 'list.advanceList.description' | translate }}</div>
   </div>
   <div class="da-content-wrapper">
     <da-layout-row [daGutter]="[24, 24]">
@@ -34,12 +28,7 @@
                 ></d-search>
               </div>
               <div class="da-right">
-                <d-button
-                  (click)="batchDelete()"
-                  [disabled]="!deleteList.length"
-                  style="margin-left: 12px"
-                  >Batch Delete</d-button
-                >
+                <d-button (click)="batchDelete()" [disabled]="!deleteList.length" style="margin-left: 12px">Batch Delete</d-button>
               </div>
             </div>
           </div>
@@ -62,9 +51,9 @@
                     *ngFor="let colOption of dataTableOptions.columns"
                     [resizeEnabled]="true"
                     (resizeEndEvent)="onResize($event, 'title')"
-                    [filterable]="colOption.filterable"
+                    [filterable]="colOption.filterable!"
                     [closeFilterWhenScroll]="true"
-                    [filterList]="colOption.filterList"
+                    [filterList]="colOption.filterList!"
                     (filterChange)="onFirstFilterChange($event, colOption)"
                     [extraFilterTemplate]="extraFilterTemplate"
                   >
@@ -74,26 +63,12 @@
                 </tr>
               </thead>
               <tbody dTableBody>
-                <ng-template
-                  let-rowItem="rowItem"
-                  let-rowIndex="rowIndex"
-                  let-nestedIndex="nestedIndex"
-                >
-                  <tr
-                    dTableRow
-                    [ngClass]="{ 'da-table-row-selected': rowItem.$checked }"
-                  >
+                <ng-template let-rowItem="rowItem" let-rowIndex="rowIndex" let-nestedIndex="nestedIndex">
+                  <tr dTableRow [ngClass]="{ 'da-table-row-selected': rowItem.$checked }">
                     <td dTableCell class="devui-checkable-cell">
                       <d-checkbox
                         [ngModelOptions]="{ standalone: true }"
-                        (ngModelChange)="
-                          onRowCheckChange(
-                            $event,
-                            rowIndex,
-                            nestedIndex,
-                            rowItem
-                          )
-                        "
+                        (ngModelChange)="onRowCheckChange($event, rowIndex, nestedIndex, rowItem)"
                         [ngModel]="rowItem.$checked"
                         [halfchecked]="rowItem.$halfChecked"
                         [disabled]="rowItem.$checkDisabled"
@@ -116,13 +91,7 @@
                     >
                       <span *ngIf="!rowItem['idEdit']">{{ rowItem?.id }}</span>
                       <div *ngIf="rowItem['idEdit']" class="edit-padding-fix">
-                        <input
-                          class="devui-form-control"
-                          name="id"
-                          [(ngModel)]="rowItem.id"
-                          [attr.maxlength]="100"
-                          [attr.minlength]="3"
-                        />
+                        <input class="devui-form-control" name="id" [(ngModel)]="rowItem.id" [attr.maxlength]="100" [attr.minlength]="3" />
                       </div>
                     </td>
                     <td
@@ -135,14 +104,8 @@
                       [beforeEditStart]="beforeEditStart"
                       [beforeEditEnd]="beforeEditEnd"
                     >
-                      <span *ngIf="!rowItem['titleEdit']"
-                        ><d-tag [tag]="'Epic'" [labelStyle]="'epic'"></d-tag>
-                        {{ rowItem?.title }}</span
-                      >
-                      <div
-                        *ngIf="rowItem['titleEdit']"
-                        class="edit-padding-fix"
-                      >
+                      <span *ngIf="!rowItem['titleEdit']"><d-tag [tag]="'Epic'" [labelStyle]="'epic'"></d-tag> {{ rowItem?.title }}</span>
+                      <div *ngIf="rowItem['titleEdit']" class="edit-padding-fix">
                         <input
                           class="devui-form-control"
                           name="title"
@@ -163,20 +126,10 @@
                       [beforeEditEnd]="beforeEditEnd"
                     >
                       <span *ngIf="!rowItem['priorityEdit']"
-                        ><d-tag
-                          [tag]="rowItem?.priority"
-                          [labelStyle]="rowItem?.priority"
-                        ></d-tag
+                        ><d-tag [tag]="rowItem?.priority" [labelStyle]="rowItem?.priority"></d-tag
                       ></span>
-                      <div
-                        *ngIf="rowItem['priorityEdit']"
-                        class="edit-padding-fix"
-                      >
-                        <d-select
-                          name="priority"
-                          [(ngModel)]="rowItem.priority"
-                          [options]="priorities"
-                        ></d-select>
+                      <div *ngIf="rowItem['priorityEdit']" class="edit-padding-fix">
+                        <d-select name="priority" [(ngModel)]="rowItem.priority" [options]="priorities"></d-select>
                       </div>
                     </td>
                     <td
@@ -189,18 +142,9 @@
                       [beforeEditStart]="beforeEditStart"
                       [beforeEditEnd]="beforeEditEnd"
                     >
-                      <span *ngIf="!rowItem['iterationEdit']">{{
-                        rowItem?.iteration
-                      }}</span>
-                      <div
-                        *ngIf="rowItem['iterationEdit']"
-                        class="edit-padding-fix"
-                      >
-                        <input
-                          dTextInput
-                          size="sm"
-                          [(ngModel)]="rowItem.iteration"
-                        />
+                      <span *ngIf="!rowItem['iterationEdit']">{{ rowItem?.iteration }}</span>
+                      <div *ngIf="rowItem['iterationEdit']" class="edit-padding-fix">
+                        <input dTextInput size="sm" [(ngModel)]="rowItem.iteration" />
                       </div>
                     </td>
                     <td
@@ -214,24 +158,11 @@
                       [beforeEditEnd]="beforeEditEnd"
                     >
                       <span *ngIf="!rowItem['assigneeEdit']">
-                        <d-avatar
-                          [name]="rowItem.assignee"
-                          [width]="24"
-                          [height]="24"
-                        ></d-avatar>
-                        <span style="margin-left: 6px">{{
-                          rowItem.assignee
-                        }}</span>
+                        <d-avatar [name]="rowItem.assignee" [width]="24" [height]="24"></d-avatar>
+                        <span style="margin-left: 6px">{{ rowItem.assignee }}</span>
                       </span>
-                      <div
-                        *ngIf="rowItem['assigneeEdit']"
-                        class="edit-padding-fix"
-                      >
-                        <input
-                          dTextInput
-                          size="sm"
-                          [(ngModel)]="rowItem.assignee"
-                        />
+                      <div *ngIf="rowItem['assigneeEdit']" class="edit-padding-fix">
+                        <input dTextInput size="sm" [(ngModel)]="rowItem.assignee" />
                       </div>
                     </td>
                     <td
@@ -245,33 +176,15 @@
                       [beforeEditEnd]="beforeEditEnd"
                     >
                       <span *ngIf="!rowItem['statusEdit']"
-                        ><span [ngClass]="rowItem?.status.split(' ')[0]">{{
-                          rowItem?.status || "--"
-                        }}</span></span
+                        ><span [ngClass]="rowItem?.status.split(' ')[0]">{{ rowItem?.status || '--' }}</span></span
                       >
-                      <div
-                        *ngIf="rowItem['statusEdit']"
-                        class="edit-padding-fix"
-                      >
-                        <d-select
-                          name="status"
-                          [(ngModel)]="rowItem.status"
-                          [options]="['Stuck', 'Done', 'Working on it']"
-                        ></d-select>
+                      <div *ngIf="rowItem['statusEdit']" class="edit-padding-fix">
+                        <d-select name="status" [(ngModel)]="rowItem.status" [options]="['Stuck', 'Done', 'Working on it']"></d-select>
                       </div>
                     </td>
-                    <td
-                      dTableCell
-                      [editable]="true"
-                      [(editing)]="rowItem['dateEdit']"
-                    >
-                      <span *ngIf="!rowItem['dateEdit']">{{
-                        rowItem?.timeline | i18nDate: "short":false
-                      }}</span>
-                      <form
-                        *ngIf="rowItem['dateEdit']"
-                        class="form-inline edit-padding-fix"
-                      >
+                    <td dTableCell [editable]="true" [(editing)]="rowItem['dateEdit']">
+                      <span *ngIf="!rowItem['dateEdit']">{{ rowItem?.timeline | i18nDate: 'short':false }}</span>
+                      <form *ngIf="rowItem['dateEdit']" class="form-inline edit-padding-fix">
                         <div class="devui-form-group">
                           <div class="devui-input-group devui-dropdown-origin">
                             <input
@@ -284,10 +197,7 @@
                               [autoOpen]="true"
                               (ngModelChange)="onEditEnd(rowItem, 'dateEdit')"
                             />
-                            <div
-                              class="devui-input-group-addon"
-                              (click)="datePicker.toggle()"
-                            >
+                            <div class="devui-input-group-addon" (click)="datePicker.toggle()">
                               <i class="icon icon-calendar"></i>
                             </div>
                           </div>
@@ -295,12 +205,7 @@
                       </form>
                     </td>
                     <td>
-                      <d-button
-                        icon="icon-delete"
-                        bsStyle="text-dark"
-                        title="delete"
-                        (click)="deleteRow(rowIndex)"
-                      ></d-button>
+                      <d-button icon="icon-delete" bsStyle="text-dark" title="delete" (click)="deleteRow(rowIndex)"></d-button>
                     </td>
                   </tr>
                 </ng-template>
@@ -313,12 +218,6 @@
   </div>
 </div>
 
-<ng-template
-  #extraFilterTemplate
-  let-checked="checked"
-  let-halfChecked="halfChecked"
->
-  <span>{{
-    checked ? "All selected" : halfChecked ? "Some selected" : " None selected"
-  }}</span>
+<ng-template #extraFilterTemplate let-checked="checked" let-halfChecked="halfChecked">
+  <span>{{ checked ? 'All selected' : halfChecked ? 'Some selected' : ' None selected' }}</span>
 </ng-template>
