chore(release): release ng-devui-admin 15.0.0 (#30)
Co-authored-by: huaweidevcloud <devcloudmobile@huawei.com>

--- a/src/app/@shared/layouts/da-layout/da-layout.component.html
+++ b/src/app/@shared/layouts/da-layout/da-layout.component.html
@@ -1,6 +1,6 @@
 <d-layout class="da-layout-wrapper">
   <d-aside
-    *ngIf="config?.sidebar?.fixed"
+    *ngIf="config.sidebar.fixed"
     class="da-layout-aside-wrapper"
     [ngStyle]="{
       display: config.sidebar.hidden ? 'none' : null,
@@ -10,8 +10,8 @@
   ></d-aside>
   <d-aside
     class="da-layout-aside-wrapper"
-    [class.da-no-sec-sidebar]="config.sidebar?.secSidebar?.hidden"
-    [class.da-layout-aside-fixed]="config?.sidebar?.fixed"
+    [class.da-no-sec-sidebar]="config.sidebar.secSidebar?.hidden"
+    [class.da-layout-aside-fixed]="config.sidebar.fixed"
     [class.da-sidebar-top]="config.mode === 'sidebarTop'"
     [ngStyle]="{
       display: config.sidebar.hidden ? 'none' : null,
@@ -24,7 +24,7 @@
   </d-aside>
   <d-layout>
     <d-header
-      *ngIf="config?.header?.fixed"
+      *ngIf="config.header?.fixed"
       class="da-layout-header-wrapper"
       [ngStyle]="{
         display: config.header?.hidden ? 'none' : null,
@@ -34,9 +34,9 @@
     <d-header
       class="da-layout-header-wrapper"
       [class.da-no-sec-header]="config.header?.secHeader?.hidden"
-      [class.da-layout-header-fixed]="config?.header?.fixed"
+      [class.da-layout-header-fixed]="config.header?.fixed"
       [ngStyle]="{
-        width: config?.header?.fixed && config.mode === 'sidebarTop' ? 'calc(100% - ' + getSidebarWidth() + ')' : null,
+        width: config.header?.fixed && config.mode === 'sidebarTop' ? 'calc(100% - ' + getSidebarWidth() + ')' : null,
         display: config.header?.hidden ? 'none' : null,
         zIndex: config.header?.zIndex
       }"
