--- a/src/app/pages/dashboard/work-space/work-space-body/work-management/work-management.component.scss
+++ b/src/app/pages/dashboard/work-space/work-space-body/work-management/work-management.component.scss
@@ -1,4 +1,4 @@
-@import '~ng-devui/styles-var/devui-var.scss';
+@import 'ng-devui/styles-var/devui-var.scss';
 
 .list-group .list-group-item {
   padding: 0 16px;
