--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,5 +1,5 @@
-@import '~ng-devui/styles-var/devui-var.scss';
-@import '~ng-devui/devui-layout.css';
+@import 'ng-devui/styles-var/devui-var.scss';
+@import 'ng-devui/devui-layout.css';
 
 body {
   background-color: $devui-base-bg;
