--- a/src/app/@shared/components/personalize/personalize.component.scss
+++ b/src/app/@shared/components/personalize/personalize.component.scss
@@ -1,4 +1,4 @@
-@import '~ng-devui/styles-var/devui-var.scss';
+@import 'ng-devui/styles-var/devui-var.scss';
 
 .da-personalize-config {
   padding: 0 12px;
