--- a/src/app/@shared/components/side-settings/side-settings.component.scss
+++ b/src/app/@shared/components/side-settings/side-settings.component.scss
@@ -1,4 +1,4 @@
-@import "~ng-devui/styles-var/devui-var.scss";
+@import "ng-devui/styles-var/devui-var.scss";
 
 .da-drawer-menu {
   .da-operations {
