--- a/src/app/@shared/styles/common.scss
+++ b/src/app/@shared/styles/common.scss
@@ -1,4 +1,4 @@
-@import "~ng-devui/styles-var/devui-var.scss";
+@import "ng-devui/styles-var/devui-var.scss";
 @import "../styles/list";
 @import "../styles/dashboard";
 
