--- a/src/app/pages/abnormal/abnormal.component.scss
+++ b/src/app/pages/abnormal/abnormal.component.scss
@@ -1,4 +1,4 @@
-@import "~ng-devui/styles-var/devui-var.scss";
+@import "ng-devui/styles-var/devui-var.scss";
 
 .da-abnormal {
   padding: 48px 32px;
