--- a/src/app/pages/dashboard/analysis/analysis-line/analysis-line.component.scss
+++ b/src/app/pages/dashboard/analysis/analysis-line/analysis-line.component.scss
@@ -1,4 +1,4 @@
-@import "~ng-devui/styles-var/devui-var.scss";
+@import "ng-devui/styles-var/devui-var.scss";
 @import "src/app/@shared/styles/common.scss";
 
 .da-analysis-line {
