--- a/src/app/pages/dashboard/analysis/analysis.component.scss
+++ b/src/app/pages/dashboard/analysis/analysis.component.scss
@@ -1,2 +1,2 @@
-@import "~ng-devui/styles-var/devui-var.scss";
+@import "ng-devui/styles-var/devui-var.scss";
 @import "src/app/@shared/styles/common.scss";
