--- a/src/app/pages/dashboard/monitor/monitor-progress/monitor-progress.component.scss
+++ b/src/app/pages/dashboard/monitor/monitor-progress/monitor-progress.component.scss
@@ -1,4 +1,4 @@
-@import '~ng-devui/styles-var/devui-var.scss';
+@import 'ng-devui/styles-var/devui-var.scss';
 
 .da-progress {
   border-radius: $devui-border-radius-card;
