--- a/src/app/pages/dashboard/work-space/work-space-body/work-operation/work-operation.component.scss
+++ b/src/app/pages/dashboard/work-space/work-space-body/work-operation/work-operation.component.scss
@@ -1,4 +1,4 @@
-@import '~ng-devui/styles-var/devui-var.scss';
+@import 'ng-devui/styles-var/devui-var.scss';
 
 .da-work-operation {
   margin-left: 12px;
